[package]
name = "salticidae"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "=0.2.0-alpha.6"
async-trait = "0.1.17"
futures = "0.1.29"
hex = "0.4.0"
byteorder = "1.3.2"
