[package]
name = "salticidae_test_suite"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"


[dependencies]
salticidae = { path = "../salticidae" }
salticidae_derive = { path = "../salticidae_derive" }
hex = "0.4.0"

[dev-dependencies]
salticidae = { path = "../salticidae" }
salticidae_derive = { path = "../salticidae_derive" }
