[package]
name = "salticidae_test_suite"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"


[dependencies]
tokio = "=0.2.0-alpha.6"
futures = "0.1.29"
byteorder = "1.3.2"
hex = "0.4.0"

[dependencies.salticidae]
version = "0.1.0"
path = "../salticidae"
features = ["derive"]

